--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Tic-Tac-Toe</h1>
+    <header>Tic-Tac-Toe</header>
+    <img id = "X" src="https://i.imgur.com/43O4eAA.png" alt="">
+    <img src="https://i.imgur.com/MSpHba3.png" alt="">
+
+    <div id="cellBlock">
+        <div id ="cell1" class = "cell">1</div>
+        <div id ="cell2" class = "cell">2</div>
+        <div id ="cell3" class = "cell">3</div>
+        <div id ="cell4" class = "cell">4</div>
+        <div id ="cell5" class = "cell">5</div>
+        <div id ="cell6" class = "cell">6</div>
+        <div id ="cell7" class = "cell">7</div>
+        <div id ="cell8" class = "cell">8</div>
+        <div id ="cell9" class = "cell">9</div>
+    </div>  
     <script src="js/main.js"></script>
 </body>
 </html>
