restart with a new look to the board

--- a/index.html
+++ b/index.html
@@ -9,20 +9,27 @@
 </head>
 <body>
     <header>Tic-Tac-Toe</header>
-    <img id = "X" src="https://i.imgur.com/43O4eAA.png" alt="">
-    <img src="https://i.imgur.com/MSpHba3.png" alt="">
+    <!-- <img id = "X" src="https://i.imgur.com/43O4eAA.png" alt="">
+    <img src="https://i.imgur.com/MSpHba3.png" alt=""> -->
 
-    <div id="cellBlock">
-        <div id ="cell1" class = "cell">1</div>
-        <div id ="cell2" class = "cell">2</div>
-        <div id ="cell3" class = "cell">3</div>
-        <div id ="cell4" class = "cell">4</div>
-        <div id ="cell5" class = "cell">5</div>
-        <div id ="cell6" class = "cell">6</div>
-        <div id ="cell7" class = "cell">7</div>
-        <div id ="cell8" class = "cell">8</div>
-        <div id ="cell9" class = "cell">9</div>
-    </div>  
+    <table>
+        <tr>
+            <td class = "cell" id="0"></td>
+            <td class = "cell" id="1"></td>
+            <td class = "cell" id="2"></td>
+        </tr>
+        <tr>
+            <td class = "cell" id="3"></td>
+            <td class = "cell" id="4"></td>
+            <td class = "cell" id="5"></td>
+        </tr>
+        <tr>
+            <td class = "cell" id="6"></td>
+            <td class = "cell" id="7"></td>
+            <td class = "cell" id="8"></td>
+        </tr>
+    </table>
+
     <script src="js/main.js"></script>
 </body>
 </html>
