--- a/index.html
+++ b/index.html
@@ -9,24 +9,21 @@
 </head>
 <body>
     <header>Tic-Tac-Toe</header>
-    <!-- <img id = "X" src="https://i.imgur.com/43O4eAA.png" alt="">
-    <img src="https://i.imgur.com/MSpHba3.png" alt=""> -->
-
     <table>
         <tr>
-            <td class = "cell" id="0">0</td>
-            <td class = "cell" id="1">1</td>
-            <td class = "cell" id="2">2</td>
+            <td class = "cell" id="c0"></td>
+            <td class = "cell" id="c1"></td>
+            <td class = "cell" id="c2"></td>
         </tr>
         <tr>
-            <td class = "cell" id="3">3</td>
-            <td class = "cell" id="4">4</td>
-            <td class = "cell" id="5">5</td>
+            <td class = "cell" id="c3"></td>
+            <td class = "cell" id="c4"></td>
+            <td class = "cell" id="c5"></td>
         </tr>
         <tr>
-            <td class = "cell" id="6">6</td>
-            <td class = "cell" id="7">7</td>
-            <td class = "cell" id="8">8</td>
+            <td class = "cell" id="c6"></td>
+            <td class = "cell" id="c7"></td>
+            <td class = "cell" id="c8"></td>
         </tr>
     </table>
 
